# nisman

./: .gitignore  docker-compose.yml  pyproject.toml
cdt/: admin.py  exceptions.py  factories.py  models.py  serializers.py  settings.py  test_admin.py  test_models.py  test_serializers.py  test_views.py  urls.py  views.py
cdt/migrations/: 0001_initial.py
config/: middlewares.py  settings.py  urls.py
tenants/: admin.py  exceptions.py  factories.py  models.py  serializers.py  test_admin.py  test_models.py  test_serializers.py  test_views.py  urls.py  views.py
tenants/migrations/: 0001_initial.py
